[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adbons"
version = "0.4.0"
description = "A wrapper for the Android adb tool. It's just adb on steroids"
readme = "README.md"
requires-python = ">=3.5"
keywords = ["android", "debug", "bridge", "adb"]
license = { text = "BSD" }
authors = [ { name = "Daniel Bälz", email = "me@dbaelz.de" } ]
dependencies = ["click", "pyyaml"]
urls = { Homepage = "https://github.com/dbaelz/adbons" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Topic :: Utilities",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Developers",
]

[project.scripts]
adbons = "src.adbons:cli"
